--- a/main.bib
+++ b/main.bib
@@ -237,6 +237,21 @@
   abstract = {PDBx/mmCIF, Protein Data Bank Exchange (PDBx) macromolecular Crystallographic Information Framework (mmCIF), has become the data standard for structural biology. With its early roots in the domain of small-molecule crystallography, PDBx/mmCIF provides an extensible data representation that is used for deposition, archiving, remediation, and public dissemination of experimentally determined three-dimensional (3D) structures of biological macromolecules by the Worldwide Protein Data Bank (wwPDB, wwpdb.org). Extensions of PDBx/mmCIF are similarly used for computed structure models by ModelArchive (modelarchive.org), integrative/hybrid structures by PDB-Dev (pdb-dev.wwpdb.org), small angle scattering data by Small Angle Scattering Biological Data Bank SASBDB (sasbdb.org), and for models computed generated with the AlphaFold 2.0 deep learning software suite (alphafold.ebi.ac.uk). Community-driven development of PDBx/mmCIF spans three decades, involving contributions from researchers, software and methods developers in structural sciences, data repository providers, scientific publishers, and professional societies. Having a semantically rich and extensible data framework for representing a wide range of structural biology experimental and computational results, combined with expertly curated 3D biostructure data sets in public repositories, accelerates the pace of scientific discovery. Herein, we describe the architecture of the PDBx/mmCIF data standard, tools used to maintain representations of the data standard, governance, and processes by which data content standards are extended, plus community tools/software libraries available for processing and checking the integrity of PDBx/mmCIF data. Use cases exemplify how the members of the Worldwide Protein Data Bank have used PDBx/mmCIF as the foundation for its pipeline for delivering Findable, Accessible, Interoperable, and Reusable (FAIR) data to many millions of users worldwide.}
 }
 
+% docking
+@article{docking,
+  title    = {Protein–peptide docking: opportunities and challenges},
+  journal  = {Drug Discovery Today},
+  volume   = {23},
+  number   = {8},
+  pages    = {1530-1537},
+  year     = {2018},
+  issn     = {1359-6446},
+  doi      = {https://doi.org/10.1016/j.drudis.2018.05.006},
+  url      = {https://www.sciencedirect.com/science/article/pii/S1359644617305937},
+  author   = {Maciej Ciemny and Mateusz Kurcinski and Karol Kamel and Andrzej Kolinski and Nawsad Alam and Ora Schueler-Furman and Sebastian Kmiecik},
+  abstract = {Peptides have recently attracted much attention as promising drug candidates. Rational design of peptide-derived therapeutics usually requires structural characterization of the underlying protein–peptide interaction. Given that experimental characterization can be difficult, reliable computational tools are needed. In recent years, a variety of approaches have been developed for ‘protein–peptide docking’, that is, predicting the structure of the protein–peptide complex, starting from the protein structure and the peptide sequence, including variable degrees of information about the peptide binding site and/or conformation. In this review, we provide an overview of protein–peptide docking methods and outline their capabilities, limitations, and applications in structure-based drug design. Key challenges are also briefly discussed, such as modeling of large-scale conformational changes upon binding, scoring of predicted models, and optimal inclusion of varied types of experimental data and theoretical predictions into an integrative modeling process.}
+}
+
 @article{wojdyr2022gemmi,
   doi       = {10.21105/joss.04200},
   url       = {https://doi.org/10.21105/joss.04200},
