--- a/fi-pdflatex.tex
+++ b/fi-pdflatex.tex
@@ -463,13 +463,12 @@ To store information about the molecular structure and its visualization, the Mo
 \end{figure}
 
 \newpage
+
+% * ✅
 \chapter{Mol* partial charges extension}
 \label{chapter:molstar_partial_charges_extension}
 
-Visualizing partial atomic charges in molecules is an essential aspect of computational chemistry research, aiding in analyzing complex molecular structures. Mol* provides an extensive range of features for users to explore molecular structures. However, the tool lacks the functionality to color and label atoms and residues based on their partial atomic charges.
-This can be a considerable limitation for researchers. In response to this need, we have created an extension to Mol* that addresses this limitation.
-
-As mentioned in the \nameref{chap:introduction}, the Mol* viewer predecessor, Litemol, supported this functionality. However, since Litemol is no longer supported, we saw the need to bring this functionality to Mol*.
+Visualizing partial atomic charges in molecules is an essential aspect of computational chemistry research, aiding in analyzing complex molecular structures. Mol* provides an extensive range of features for exploring molecular structures. However, the tool lacks the functionality to color and label atoms and residues based on their partial atomic charges. As mentioned in the \nameref{chap:introduction}, the Mol* viewer predecessor, Litemol, supported this functionality. Nevertheless, since Litemol is no longer supported, we saw the need to bring this functionality to Mol*.
 
 This chapter describes the requirements for the extension, the custom mmCIF categories necessary for storing the partial atomic charges, and the implementation of the extension itself.
 
