--- a/main.bib
+++ b/main.bib
@@ -643,3 +643,11 @@ https://www.cgl.ucsf.edu/chimera/docs/UsersGuide/tutorials/pdbintro.html
   year      = {2014},
   publisher = {Elsevier}
 }
+
+% biomolecular structure
+@book{zvelebil2007understanding,
+  title={Understanding bioinformatics},
+  author={Zvelebil, Marketa J and Baum, Jeremy O},
+  year={2007},
+  publisher={Garland Science}
+}
