--- a/fi-pdflatex.tex
+++ b/fi-pdflatex.tex
@@ -373,9 +373,9 @@ Color interpolation refers to the process of determining intermediate colors bet
 \chapter{Visualizing molecular data}
 \label{chapter:visualizing_molecular_data}
 
-% TODO: plagiarism
+The chemical file formats discussed in Section \ref{section:chemical_file_formats} provide a convenient way of storing molecular data. However, they alone do not provide an efficient way of interpreting the data, especially for large structures. The data needs to be visualized to comprehend and extract meaningful insights from the data. \cite{gu2009structural}
 
-Visualizing molecular data is a challenging task due to the complexity of the data and the large number of possible representations. This chapter describes the different types of visualizations used in molecular visualization and their applications.
+This chapter explores the various types of visualizations and color schemes used to represent molecular data. It also discusses the different visualization tools available for visualizing molecular data.
 
 \section{Types of visualizations}
 \label{section:types_of_visualizations}
@@ -387,9 +387,9 @@ There are several methods for representing molecular data, each serving a differ
 \subsection{Ball and stick}
 \label{subsection:ball_and_stick}
 
-The ball and stick model represents atoms as spheres and bonds as cylindrical connections between these spheres. This model provides a simple and intuitive visualization of a molecule's atomic structure. It highlights individual atoms and their bonds, including their bond types. However, it is not suitable for visualizing larger molecules due to the large number of atoms and bonds that would need to be displayed.
+The ball and stick model represents atoms as spheres and bonds as cylindrical connections between these spheres. This ball and stick model provides a simple and intuitive visualization of a molecule's atomic structure. It highlights individual atoms and their bonds, including their bond types. \cite{tsai2003introduction} However, it is not suitable for visualizing larger molecules due to the large number of atoms and bonds that would need to be displayed.
 
-Examples of ball and stick models are shown in Figures \ref{fig:element_symbol} and \ref{fig:partial_charges_color_theme-bas}.
+Examples of ball and stick representations are shown in Figures \ref{fig:structure2}, \ref{fig:element_symbol}, and \ref{fig:partial_charges_color_theme-bas}.
 
 \subsection{Surface}
 \label{subsection:surface}
@@ -402,11 +402,9 @@ Examples of surface models are shown in Figures \ref{fig:psilocybin} and \ref{fi
 \subsection{Cartoon}
 \label{subsection:cartoon}
 
-Cartoon representations simplify the molecular structure by focusing on the secondary structure elements of proteins and nucleic acids, such as alpha helices and beta sheets. Alpha helices are often depicted as a spiral-like structures, whereas beta sheets as arrows. \ref{}
+Cartoon representations simplify the molecular structure by focusing on the secondary structure elements of proteins and nucleic acids, such as alpha helices and beta sheets. Alpha helices are often depicted as spiral-like structures, whereas beta sheets as arrows. This type of visualization is beneficial for visualizing large macromolecular complexes, as it highlights the overall organization and topology of the molecule without the clutter of atomic details. \cite{gu2009structural,tsai2003introduction}
 
-This type of visualization is particularly useful for visualizing large macromolecular complexes, as it highlights the overall organization and topology of the molecule without the clutter of atomic details. The simplification of the structure also makes it easier to understand the folding and dynamics of the molecule. \cite{tsai2003introduction}
-
-Examples of cartoon models are shown in Figures \ref{fig:partial_charges_color_theme-cartoon} and \ref{fig:hemoglobin}.
+Figure \ref{fig:cartoon} shows an example of an alpha helix and beta sheet of a protein. Examples of cartoon representations are shown in Figures \ref{fig:hemoglobin} and \ref{fig:partial_charges_color_theme-cartoon}.
 
 \section{Coloring of molecular visualizations}
 \label{subsection:coloring_of_molecular_visualizations}
@@ -421,6 +419,7 @@ Equally important as the type of visualization is the coloring scheme used to re
 
 \begin{figure}[htbp]
   \centering
+  \subfigure[Example of α-helix and β-sheet representation.]{\label{fig:cartoon}\includegraphics[height=4.5cm]{figures/cartoon.png}}
   \subfigure[Element symbol.]{\label{fig:element_symbol}\includegraphics[height=4.5cm]{figures/ball_and_stick.png}}
   \subfigure[Chain ID.]{\label{fig:chain_id_coloring}\includegraphics[height=4.5cm]{figures/chain_id_coloring.png}}
   \caption{Coloring of molecular structures by various color schemes.}
