--- a/fi-pdflatex.tex
+++ b/fi-pdflatex.tex
@@ -370,6 +370,8 @@ Figure \ref{fig:mmcif} depicts the \texttt{\_atom\_site} category in the mmCIF f
 Color interpolation refers to the process of determining intermediate colors between two or more given colors. This is typically done by taking a weighted average of the red, green, and blue values of the interpolated colors. It is a common technique used in computer graphics to smoothly transition between colors or to generate new colors based on existing ones. \cite{zucconi2016secrets}
 
 \newpage
+
+% * ✅
 \chapter{Visualizing molecular data}
 \label{chapter:visualizing_molecular_data}
 
@@ -409,7 +411,7 @@ Figure \ref{fig:cartoon} shows an example of an alpha helix and beta sheet of a 
 \section{Coloring of molecular visualizations}
 \label{subsection:coloring_of_molecular_visualizations}
 
-Equally important as the type of visualization is the coloring scheme used to represent the molecule. Coloring is an essential aspect of molecular visualization, as it can provide additional information and help emphasize specific molecule features or properties. Some common coloring schemes include:
+The coloring scheme used to represent the molecular structure is equally important as the visualization type. Coloring molecular structures can provide additional information and help emphasize specific molecule features and properties.
 
 \begin{itemize}
   \item \textbf{Element symbol}: atoms are colored according to their chemical element (e.g., carbon in grey, oxygen in red, nitrogen in blue). This coloring is useful for distinguishing between different types of atoms in a molecule. See Figure \ref{fig:element_symbol} for an example.
