--- a/fi-pdflatex.tex
+++ b/fi-pdflatex.tex
@@ -84,7 +84,7 @@
       
       Visualizing these partial atomic charges was previously done using the Litemol viewer. However, the Litemol viewer is no longer maintained, and its replacement, the Mol* viewer, currently lacks support for visualizing partial atomic charges.
       
-      This thesis addresses this gap in functionality by extending the Mol* viewer to support the visualization of partial atomic charges. The extended Mol* viewer is subsequently integrated into the Atomic Charge Calculator II and αCharges web applications. In addition, we have upgraded the functionality of the Atomic Charge Calculator II application to permit multiple calculations within a single request.
+      This thesis addresses this gap in functionality by extending the Mol* viewer to support the visualization of partial atomic charges. The extended Mol* viewer is subsequently integrated into the Atomic Charge Calculator II and αCharges web applications. In addition, the functionality of the Atomic Charge Calculator II application was upgraded to permit multiple calculations within a single request.
       
       These advancements provide researchers with enhanced visualization capabilities and user interfaces for calculating and analyzing partial atomic charges.
     },
